[gd_scene load_steps=7 format=2]

[ext_resource path="res://gui/bar.gd" type="Script" id=1]
[ext_resource path="res://gui/textures/Bar.png" type="Texture" id=2]
[ext_resource path="res://gui/textures/BarColorOverlay.png" type="Texture" id=3]
[ext_resource path="res://gui/sounds/Gage.wav" type="AudioStream" id=4]
[ext_resource path="res://gui/textures/HBar.png" type="Texture" id=5]
[ext_resource path="res://gui/textures/HBarColorOverlay.png" type="Texture" id=6]

[node name="Bar" type="Control"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 8.0
margin_bottom = 56.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorOverlay" type="TextureRect" parent="TextureRect"]
modulate = Color( 0.905882, 0.905882, 0.580392, 1 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
margin_right = 8.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRectHorizontal" type="TextureRect" parent="."]
visible = false
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorOverlay" type="TextureRect" parent="TextureRectHorizontal"]
modulate = Color( 0.905882, 0.905882, 0.580392, 1 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="TextureRectHorizontal"]
margin_left = 56.0
margin_right = 56.0
margin_bottom = 8.0
size_flags_horizontal = 0
size_flags_vertical = 0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FillSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -3.0
